# orbit-cursor

./: .gitignore  .prettierrc  README.md  eslint.config.js  package.json  pnpm-lock.yaml  tsconfig.node.json  vitest.workspace.ts
.github/workflows/: sanity-check.yml
.storybook/: main.ts  manager.ts  preview.ts  theme.ts  vitest.setup.ts
.storybook/components/: render-variants.tsx
src/: index.css  main.tsx
src-tauri/: .env.example  Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
src-tauri/capabilities/: default.json  macos.json  windows.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 1_create_recordings_table.up.sql  2_track_system_cursor_in_recording.down.sql  2_track_system_cursor_in_recording.up.sql  3_add_recording_name.down.sql  3_add_recording_name.up.sql  4_recording_metadata.down.sql  4_recording_metadata.up.sql
src-tauri/src/: constants.rs  lib.rs  models.rs
src-tauri/src/audio/: commands.rs  mod.rs  models.rs  service.rs
src-tauri/src/camera/: commands.rs  models.rs  service.rs
src-tauri/src/db/: recordings.rs
src-tauri/src/export/: commands.rs  service.rs
src-tauri/src/global_inputs/: service.rs
src-tauri/src/permissions/: commands.rs  models.rs  service.rs
src-tauri/src/recording/: audio.rs  camera.rs  commands.rs  ffmpeg.rs  file.rs  input_events.rs  mod.rs  models.rs  screen.rs  service.rs  video.rs
src-tauri/src/recording_management/: commands.rs
src-tauri/src/recording_sources/: commands.rs  service.rs
src-tauri/src/recording_state/: commands.rs
src-tauri/src/screen_capture/: commands.rs  service.rs
src-tauri/src/system_tray/: service.rs
src-tauri/src/windows/: commands.rs  mod.rs  models.rs  service.rs
src/api/: audio-listeners.ts  permissions.ts  recording-management.ts  windows.ts
src/app/: index.tsx  provider.tsx  router.tsx
src/app/pages/: editor.tsx  listbox-standalone.tsx  recording-dock.tsx  recording-input-options.tsx  recording-source-selector.tsx  region-selector.tsx  region.tsx  start-recording-dock.tsx
src/app/pages/editor/: editor.tsx  recording-list-modal.tsx
src/app/pages/request-permissions/: request-permissions.tsx
src/components/base/badge/: badge.stories.tsx  badge.tsx
src/components/base/button/: button.stories.tsx  button.tsx  toggle-button.stories.tsx  toggle-button.tsx
src/components/base/checkbox/: checkbox-controlled.tsx  checkbox.stories.tsx  checkbox.tsx
src/components/base/circular-progress-bar/: circular-progress-bar.stories.tsx  circular-progress-bar.tsx
src/components/base/content-rotate/: content-rotate.stories.tsx  content-rotate.tsx
src/components/base/input-fields/: input-field.tsx  number-field.stories.tsx  number-field.tsx  text-field.stories.tsx  text-field.tsx
src/components/base/keyboard/: keyboard.stories.tsx  keyboard.tsx
src/components/base/listbox/: listbox.stories.tsx  listbox.tsx
src/components/base/listbox-item/: listbox-item.tsx
src/components/base/modal/: modal.stories.tsx  modal.tsx
src/components/base/number-field/: number-field.tsx
src/components/button/: button.stories.tsx  button.tsx  toggle-button.stories.tsx  toggle-button.tsx
src/components/checkbox/: checkbox-controlled.tsx  checkbox.stories.tsx  checkbox.tsx
src/components/circular-progress-bar/: circular-progress-bar.stories.tsx  circular-progress-bar.tsx
src/components/content-rotate/: content-rotate.stories.tsx  content-rotate.tsx
src/components/icons/: mouse-pointer-2-off.tsx
src/components/keyboard/: keyboard.stories.tsx  keyboard.tsx
src/components/listbox/: listbox.stories.tsx  listbox.tsx
src/components/listbox-item/: listbox-item.tsx
src/components/modal/: modal.stories.tsx  modal.tsx
src/components/number-field/: number-field.stories.tsx  number-field.tsx
src/components/overflow-shadow/: overflow-shadow.stories.tsx  overflow-shadow.tsx
src/components/overlay/: overlay.stories.tsx  overlay.tsx
src/components/radio-group/: radio-group.tsx
src/components/select/: select.stories.tsx  select.tsx
src/components/separator/: separator.stories.tsx  separator.tsx
src/components/sparkles/: sparkles.stories.tsx  sparkles.tsx
src/components/switch/: switch.stories.tsx  switch.tsx
src/components/toast/: toast-provider.tsx  toast-region.tsx  toast.stories.tsx  toast.tsx
src/components/tooltip/: tooltip.stories.tsx  tooltip.tsx
src/features/recording-inputs/: types.ts
src/features/region-selector/: types.ts
src/lib/: format.ts  queryKeys.ts  styling.ts  time.ts
src/stores/: hotkeys.store.ts  permissions.store.ts  recording-preferences.store.ts  recording-state.store.ts  region-selector.store.ts  standalone-listbox.store.ts  window-open-state.store.ts
src/stores/editor/: export-preferences.store.ts  playback.store.ts
src/types/: api.ts  events.ts
(+112 files in other folders)
