[package]
name = "orbit-cursor"
version = "0.1.0"
description = ""
authors = ["domingasp"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orbit_cursor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.5.0", features = [ "protocol-asset", "tray-icon", "macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
border = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }
tokio = { version = "1", features = ["full"] }
strum = "0.27"
strum_macros = "0.27"
tauri-plugin-shell = "2.2.1"
dispatch = "0.2.0"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
tauri-plugin-store = "2"
cpal = { git = "https://github.com/domingasp/cpal.git"}
yuv = "0.8.4"
once_cell = "1.21.3"
scap = { git = "https://github.com/domingasp/scap", branch = "macos-window-as-target" }
base64 = "0.22.1"
futures = "0.3.31"
xcap = "0.6.0"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
hound = "3.5.1"

[dependencies.nokhwa]
git = "https://github.com/l1npengtul/nokhwa.git"
branch = "0.10"
features = ["input-native", "output-wgpu", "output-threaded"]

[dependencies.image]
version = "0.25"
features = ["default-formats"]

[target."cfg(target_os = \"macos\")".dependencies]
tauri-plugin-macos-permissions = "2.2.0"
cocoa = "0.26"
objc = "0.2.7"
cidre = { git = "https://github.com/yury/cidre" }

[features]
# for tauri-nspanel
cargo-clippy = []
