[package]
name = "orbit-cursor"
version = "0.1.0"
description = ""
authors = ["domingasp"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "orbit_cursor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
dotenvy = "0.15.7"
dotenvy_macro = "0.15.7"

[dependencies]
tauri = { version = "2.5.0", features = [
    "protocol-asset",
    "tray-icon",
    "macos-private-api",
    "image-ico",
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
strum = "0.27"
strum_macros = "0.27"
tauri-plugin-shell = "2.2.1"
dispatch = "0.2.0"
rdev = { git = "https://github.com/Narsil/rdev", rev = "c77b4e5456301cfa7f2226020f2a58f2f8d77c5d", features = [
    "serialize",
] }
tauri-plugin-store = "2"
cpal = { git = "https://github.com/domingasp/cpal.git" }
yuv = "0.8.4"
once_cell = "1.21.3"
scap = { git = "https://github.com/domingasp/scap", rev = "1448fcce453ac06b077a0e07f190a3874115cdbb" }
base64 = "0.22.1"
futures = "0.3.31"
xcap = "0.6.0"
uuid = { version = "1.17.0", features = ["v4"] }
chrono = "0.4.41"
ffmpeg-sidecar = "2.0.6"
rmp-serde = "1.3.0"
tauri-plugin-os = "2"
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
log = "0.4"
rayon = "1.10.0"
parking_lot = { version = "0.12.4", features = ["deadlock_detection"] }
rapidfuzz = "0.5"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
sqlx = { version = "0.8", features = ["sqlite", "runtime-tokio"] }
fancy-regex = "0.16.1"

[dependencies.nokhwa]
git = "https://github.com/l1npengtul/nokhwa.git"
branch = "0.10"
features = ["input-native", "output-wgpu", "output-threaded"]

[dependencies.image]
version = "0.25"
features = ["default-formats"]

[target."cfg(target_os = \"macos\")".dependencies]
tauri-plugin-macos-permissions = "2.2.0"
cocoa = "0.26"
objc = "0.2.7"
cidre = "0.11.3"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
border = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

[target."cfg(target_os = \"windows\")".dependencies]
windows = { version = "0.58.0", features = [
    "Win32_System_Registry",
    "Win32_Graphics_Gdi",
    "Win32_Graphics_Dwm",
    "Win32_System_ProcessStatus",
    "Win32_Foundation",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }
winreg = "0.10"
edid-rs = "0.1"

[features]
# for tauri-nspanel
cargo-clippy = []
